fixed white space on mobile view

--- a/src/styles/benefits.css
+++ b/src/styles/benefits.css
@@ -149,7 +149,7 @@ font-family: 'Raleway', sans-serif;
 
 @media (max-width: 767px) {
   .benefits-container {
-    font-size: 16px; /* Adjust the font size for mobile devices */
+    font-size: 16px;
   }
 
   .benefits-container h3 {
@@ -162,6 +162,10 @@ font-family: 'Raleway', sans-serif;
 
   .benefits-container .row {
     margin: 0px 20px 20px 20px !important;
+  }
+
+  .benefits-container .benefits-button-row {
+    margin: 0px 20px 0px 20px !important;
   }
 
   .third-row {
