--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Sacramento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla&family=Lora&family=Nunito+Sans:opsz@6..12&family=Raleway:wght@300;500;800&display=swap');
+
 .homepage-container {
   min-height: 100vh;
 }
@@ -41,6 +43,7 @@
   color: whitesmoke;
   text-align: center;
   line-height: 1.5;
+  font-family: 'Raleway', sans-serif;
 } 
 
 .step-button {
